fixed alignment issues when adding more cards or side content growns in length

--- a/style.css
+++ b/style.css
@@ -168,8 +168,9 @@ input {
 
 .projects {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto min-content;
     gap: 10px;
+    align-content: start;
 }
 
 .projects>div {
@@ -190,7 +191,7 @@ input {
     border-left: 8px solid var(--main-color);
     padding: 20px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: space-between;
 
 
@@ -203,18 +204,19 @@ input {
     grid-template-columns: auto auto auto;
     justify-content: end;
     gap: 10px;
-    align-items: center;
+    align-items: end;
 }
 
 .main-side {
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: min-content min-content;
     gap: 40px;
 }
 
 
 .main-side>div {
-    border: 1px solid black;
+    border: none;
+
     display: grid;
     grid-template-rows: 1fr 1fr;
 }
@@ -227,5 +229,16 @@ input {
 
 .main-side>.announcements>div, .main-side>.trending>div {
     background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0px 1px 5px 1px hsla(0, 0%, 0%, 0.549);
+    display: grid;
+    /* grid-template-columns: 1fr; */
+    grid-template-rows: min-content min-content min-content;
+    padding: 20px;
+    gap: 20px;
+}
 
+.announcements>div>div, .trending>div>div {
+
+    border-top: 1px solid black;
 }
